<?xml version="1.0"?>
<package>
  <name>viodom</name>
  <version>0.0.0</version>
  <description>Visual odometry package, currently supporting stereo camera + IMU</description>
  <author email="fcaballero@us.es">Fernando Caballero</author>
  <author email="fjperezgrau@gmail.com">Francisco J. Perez Grau</author>
  <maintainer email="fcaballero@us.es">Fernando Caballero</maintainer>
  <maintainer email="fjperezgrau@gmail.com">Francisco J. Perez Grau</maintainer>
  <license>BSD 3-Clause License</license>
  <url type="website">http://wiki.ros.org/viodom</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
